add explore section and change to tsx, add pictures and svg, and modify the mainsection

--- a/src/app/mainsection.css
+++ b/src/app/mainsection.css
@@ -8,3 +8,16 @@
     rgba(26, 35, 46, 1) 100%
   );
 }
+
+.mainbackgroundcss {
+  background: rgb(25, 33, 45);
+  background: linear-gradient(
+    95deg,
+    rgba(25, 33, 45, 1) 0%,
+    rgba(19, 26, 41, 1) 28%,
+    rgba(17, 27, 47, 1) 47%,
+    rgba(17, 27, 46, 1) 59%,
+    rgba(19, 26, 41, 1) 80%,
+    rgba(25, 33, 45, 1) 100%
+  );
+}
